style.css
html {
    background-color: rgb(16, 49, 41);
    font-family: 'Courier New', Courier, monospace;
}

header {
    color:white;
    text-align: center;
    font-size: 50px;
}

#popupForm {
    display: none;
    position: fixed;
    bottom: 0;
    right: 15px;
    border: 3px solid #f1f1f1;
    z-index: 9;
}

#bookForm {
    max-width: 400px;
    padding: 5px 10px 10px 10px;
    background-color: white;  
}

#bookForm h1 {
    margin-top: 0px;
}

#bookForm input[type=text] {
    width: 92%;
    padding: 15px;
    margin: 5px 0 22px 0;
    border: none;
    background: #f1f1f1;
}

#bookForm input[type=number] {
    width: 92%;
    padding: 15px;
    margin: 5px 0 15px 0;
    border: none;
    background: #f1f1f1;
}

#bookForm label[for=isRead] {
    width: 100%;
    float: left;
}

.radlabel {
    float: left;
    width: 300px;
    padding-right: 75px;
    padding-bottom: 10px;
}

#bookForm input[type=radio] {
    float: left;
    padding-right: 10px;
}

#bookDisplay {
    display: grid;
    width: 100%;
    justify-items: center;
    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto;
    grid-gap: 20px;
    padding-top: 20px;
}

.book-item {
    width: 160px;
    height: 200px;
    border: 1px solid white;
    position: relative;
}

.book-item:hover, .book-item:focus {
    outline: none;
    box-shadow: 0 2px 12px 0 white;
}

.book-item h2 {
    font-size: 1.35em;
    margin: 8px 5px 5px 8px;
    color: white;
}

.book-item h3 {
    position: absolute;
    bottom: 0;
    font-size: 1em;
    width: 100%;
    text-align: center;
    margin-bottom: 8px;
    color: white;
}

